# aiops-enabler-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: README.md
examples/manual_registration/: README.md  quickstart.py
examples/skill_onboarding/: README.md  quickstart.py
src/aiops_enabler/: __init__.py  client.py  signing.py
tests/: test_client.py  test_signing_parity.py
